--- a/thesis/license.tex
+++ b/thesis/license.tex
@@ -20,7 +20,7 @@
     \end{center}
     \vspace*{-1ex}
     \begin{ttfamily}
-      \setlength{\parskip}{12pt}
+      \nonzeroparskip
       \setlength{\parindent}{0pt}
       The MIT License (MIT)
 
