--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1183,6 +1183,22 @@
   file = {/home/philipp/Zotero/storage/5EIBY7CL/tapenade.html}
 }
 
+@online{tarek2020dynamicppl,
+  title = {{{DynamicPPL}}: {{Stan}}-like {{Speed}} for {{Dynamic Probabilistic Models}}},
+  shorttitle = {{{DynamicPPL}}},
+  author = {Tarek, Mohamed and Xu, Kai and Trapp, Martin and Ge, Hong and Ghahramani, Zoubin},
+  date = {2020-02-07},
+  url = {http://arxiv.org/abs/2002.02702},
+  urldate = {2020-10-18},
+  abstract = {We present the preliminary high-level design and features of DynamicPPL.jl, a modular library providing a lightning-fast infrastructure for probabilistic programming. Besides a computational performance that is often close to or better than Stan, DynamicPPL provides an intuitive DSL that allows the rapid development of complex dynamic probabilistic programs. Being entirely written in Julia, a high-level dynamic programming language for numerical computing, DynamicPPL inherits a rich set of features available through the Julia ecosystem. Since DynamicPPL is a modular, stand-alone library, any probabilistic programming system written in Julia, such as Turing.jl, can use DynamicPPL to specify models and trace their model parameters. The main features of DynamicPPL are: 1) a meta-programming based DSL for specifying dynamic models using an intuitive tilde-based notation; 2) a tracing data-structure for tracking RVs in dynamic probabilistic models; 3) a rich contextual dispatch system allowing tailored behaviour during model execution; and 4) a user-friendly syntax for probabilistic queries. Finally, we show in a variety of experiments that DynamicPPL, in combination with Turing.jl, achieves computational performance that is often close to or better than Stan.},
+  archivePrefix = {arXiv},
+  eprint = {2002.02702},
+  eprinttype = {arxiv},
+  file = {/home/philipp/Zotero/storage/UY36CUVX/Tarek et al_2020_DynamicPPL.pdf},
+  primaryClass = {cs, stat},
+  version = {1}
+}
+
 @inproceedings{tokui2015chainer,
   title = {Chainer: A {{Next}}-{{Generation Open Source Framework}} for {{Deep Learning}}},
   booktitle = {Proceedings of Workshop on Machine Learning Systems ({{LearningSys}}) in the Twenty-Ninth Annual Conference on Neural Information Processing Systems ({{NIPS}})},
