--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -53,7 +53,8 @@
 \RequirePackage{listings}
 \RequirePackage{xcolor}              % for coloring
 \RequirePackage{textcomp}            % for upright single quotes
-\RequirePackage{amssymb}             % for the ϰ symbol
+% \RequirePackage{amssymb}             % for the ϰ symbol
+% \RequirePackage{MnSymbol} % replaces amssymb
 \RequirePackage{eurosym}             % for the € symbol
 \PassOptionsToPackage{T1}{fontenc}
 \RequirePackage{fontenc}             % for the « and » symbols
