--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -35,7 +35,7 @@
     example.
   \item[\(\int \prob{x} \dif x = 1\)] Integrals over the whole domain of a density or measure are
     written as indefinite integrals, where the usage is clear.
-  \item[{\([x, y, z] = \smash[b]{\begin{bsmallmatrix}x\\y\\z\end{bsmallmatrix}}\)}] For consistency
+  \item[{\([x, y, z] = \smash[b]{\left(\begin{smallmatrix}x\\y\\z\end{smallmatrix}\right)}\)}] For consistency
     with Julia code, vectors (arrays of rank \(1\)) are written in brackets, with elements separated
     by commas.  Thereby, the form written in a row denotes a column vector; actual row vectors are
     written as transposed column vectors.
