--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -189,6 +189,7 @@
 \newcommand{\Sqrt}[1]{#1^{\frac{1}{2}}}
 \newcommand{\kth}[2][k]{#2^{(#1)}}
 \newcommand{\sequence}[2][k \ge 1]{(#2)_{#1}}
+\newcommand{\indicator}[1]{\vvmathbb{1}(#1)}
 \newcommand{\Normal}{\distr{Normal}}
 \newcommand{\MVNormal}{\distr{MvNormal}}
 \newcommand{\vect}[1]{\boldsymbol{#1}}
