--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -341,6 +341,16 @@
   number = {1}
 }
 
+@article{geman1984stochastic,
+  title = {Stochastic Relaxation, {{Gibbs}} Distributions, and the {{Bayesian}} Restoration of Images},
+  author = {Geman, Stuart and Geman, Donald},
+  date = {1984},
+  journaltitle = {IEEE Transactions on pattern analysis and machine intelligence},
+  pages = {721--741},
+  file = {/home/philipp/Zotero/storage/3S8V8W6G/Geman and Geman - Stochastic Relaxation, Gibbs Distributions, and th.pdf},
+  number = {6}
+}
+
 @article{geweke2004getting,
   title = {Getting {{It Right}}: {{Joint Distribution Tests}} of {{Posterior Simulators}}},
   shorttitle = {Getting {{It Right}}},
@@ -735,6 +745,25 @@
   abstract = {WinBUGS is a fully extensible modular framework for constructing and analysing Bayesian full probability models. Models may be specified either textually via the BUGS language or pictorially using a graphical interface called DoodleBUGS. WinBUGS processes the model specification and constructs an object-oriented representation of the model. The software offers a user-interface, based on dialogue boxes and menu commands, through which the model may then be analysed using Markov chain Monte Carlo techniques. In this paper we discuss how and why various modern computing concepts, such as object-orientation and run-time linking, feature in the software’s design. We also discuss how the framework may be extended. It is possible to write specific applications that form an apparently seamless interface with WinBUGS for users with specialized requirements. It is also possible to interface with WinBUGS at a lower level by incorporating new object types that may be used by WinBUGS without knowledge of the modules in which they are implemented. Neither of these types of extension require access to, or even recompilation of, the WinBUGS source-code.},
   file = {/home/philipp/Zotero/storage/77M9WPQA/Lunn et al. - WinBUGS - A Bayesian modelling framework Concepts.pdf},
   langid = {english}
+}
+
+@article{lunn2009bugs,
+  title = {The {{BUGS}} Project: {{Evolution}}, Critique and Future Directions},
+  shorttitle = {The {{BUGS}} Project},
+  author = {Lunn, David J. and Spiegelhalter, David and Thomas, Andrew and Best, Nicky},
+  date = {2009},
+  journaltitle = {Statistics in Medicine},
+  volume = {28},
+  pages = {3049--3067},
+  issn = {1097-0258},
+  doi = {10.1002/sim.3680},
+  url = {https://www.onlinelibrary.wiley.com/doi/abs/10.1002/sim.3680},
+  urldate = {2020-10-19},
+  abstract = {BUGS is a software package for Bayesian inference using Gibbs sampling. The software has been instrumental in raising awareness of Bayesian modelling among both academic and commercial communities internationally, and has enjoyed considerable success over its 20-year life span. Despite this, the software has a number of shortcomings and a principal aim of this paper is to provide a balanced critical appraisal, in particular highlighting how various ideas have led to unprecedented flexibility while at the same time producing negative side effects. We also present a historical overview of the BUGS project and some future perspectives. Copyright © 2009 John Wiley \& Sons, Ltd.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.3680},
+  file = {/home/philipp/Zotero/storage/3JBVLQV3/Lunn et al_2009_The BUGS project.pdf;/home/philipp/Zotero/storage/FMDN42MP/sim.html},
+  langid = {english},
+  number = {25}
 }
 
 @online{luo2018implement,
@@ -1194,7 +1223,7 @@
   archivePrefix = {arXiv},
   eprint = {2002.02702},
   eprinttype = {arxiv},
-  file = {/home/philipp/Zotero/storage/UY36CUVX/Tarek et al_2020_DynamicPPL.pdf},
+  file = {/home/philipp/Zotero/storage/UY36CUVX/Tarek et al_2020_DynamicPPL.pdf;/home/philipp/Zotero/storage/BW88TF2C/2002.html},
   primaryClass = {cs, stat},
   version = {1}
 }
